--- a/indecision-app/package.json
+++ b/indecision-app/package.json
@@ -5,19 +5,22 @@
   "license": "MIT",
   "scripts": {
     "serve": "live-server public/",
-    "build": "webpack --watch",
-    "build-babel": "babel ./public/src/app.js --out-file=./public/scripts/app.js --presets=env,react --watch"
+    "build": "webpack",
+    "dev-server": "webpack-dev-server"
   },
   "dependencies": {
     "babel-cli": "6.26.0",
     "babel-core": "6.25.0",
     "babel-loader": "7.1.1",
+    "babel-plugin-transform-class-properties": "6.24.1",
     "babel-preset-env": "1.7.0",
     "babel-preset-react": "6.24.1",
     "live-server": "^1.2.1",
     "react": "17.0.0",
     "react-dom": "17.0.0",
+    "react-modal": "2.2.2",
     "validator": "^13.5.2",
-    "webpack": "3.1.0"
+    "webpack": "3.1.0",
+    "webpack-dev-server": "2.5.1"
   }
 }
